--- a/packages/webpack/package.json
+++ b/packages/webpack/package.json
@@ -34,6 +34,7 @@
     "@babel/plugin-transform-react-constant-elements": "^7.12.1",
     "@babel/preset-env": "^7.12.1",
     "@babel/preset-react": "^7.12.5",
+    "@babel/preset-typescript": "^7.14.5",
     "@svgr/core": "^5.5.0",
     "@svgr/plugin-jsx": "^5.5.0",
     "@svgr/plugin-svgo": "^5.5.0",
